# adversarial-evolution

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  ie_compete_genome.py  ie_play_saved.py  interleaved_evolution.py  main.py  neat_config_boxing.ini  plot_compare_results_heatmap.py  pyproject.toml  requirements.txt  run_experiments.sh
.devcontainer/: .env.example  devcontainer.json  setup.sh
docs/: DEVELOPMENT.md  EXPERIMENTS.md
results/Asymmetric_Policies/: metrics.npz
results/Freeze_Population_A/: metrics.npz
results/Freeze_Population_B/: metrics.npz
results/Policy_Config_Baseline/: metrics.npz
results/Policy_Config_ExtraLayer/: metrics.npz
results/Policy_Config_ReLU/: metrics.npz
results/half_penalty/: best_gen10_A.pkl  best_gen10_B.pkl  best_gen11_A.pkl  best_gen11_B.pkl  best_gen12_A.pkl  best_gen12_B.pkl  best_gen13_A.pkl  best_gen13_B.pkl  best_gen14_A.pkl  best_gen14_B.pkl  best_gen15_A.pkl  best_gen15_B.pkl  best_gen16_A.pkl  best_gen16_B.pkl  best_gen17_A.pkl  best_gen17_B.pkl  best_gen18_A.pkl  best_gen18_B.pkl  best_gen19_A.pkl  best_gen19_B.pkl  best_gen1_A.pkl  best_gen1_B.pkl  best_gen20_A.pkl  best_gen20_B.pkl  best_gen21_A.pkl  best_gen21_B.pkl  best_gen22_A.pkl  best_gen22_B.pkl  best_gen23_A.pkl  best_gen23_B.pkl  best_gen24_A.pkl  best_gen24_B.pkl  best_gen25_A.pkl  best_gen25_B.pkl  best_gen26_A.pkl  best_gen26_B.pkl  best_gen27_A.pkl  best_gen27_B.pkl  best_gen28_A.pkl  best_gen28_B.pkl  (+60 more)
results/inverse_penalty/: best_gen10_A.pkl  best_gen10_B.pkl  best_gen11_A.pkl  best_gen11_B.pkl  best_gen12_A.pkl  best_gen12_B.pkl  best_gen13_A.pkl  best_gen13_B.pkl  best_gen14_A.pkl  best_gen14_B.pkl  best_gen15_A.pkl  best_gen15_B.pkl  best_gen16_A.pkl  best_gen16_B.pkl  best_gen17_A.pkl  best_gen17_B.pkl  best_gen18_A.pkl  best_gen18_B.pkl  best_gen19_A.pkl  best_gen19_B.pkl  best_gen1_A.pkl  best_gen1_B.pkl  best_gen20_A.pkl  best_gen20_B.pkl  best_gen21_A.pkl  best_gen21_B.pkl  best_gen22_A.pkl  best_gen22_B.pkl  best_gen23_A.pkl  best_gen23_B.pkl  best_gen24_A.pkl  best_gen24_B.pkl  best_gen25_A.pkl  best_gen25_B.pkl  best_gen26_A.pkl  best_gen26_B.pkl  best_gen27_A.pkl  best_gen27_B.pkl  best_gen28_A.pkl  best_gen28_B.pkl  (+48 more)
results/long_generation_blank_b/: best_gen10_A.pkl  best_gen11_A.pkl  best_gen12_A.pkl  best_gen13_A.pkl  best_gen14_A.pkl  best_gen15_A.pkl  best_gen16_A.pkl  best_gen17_A.pkl  best_gen18_A.pkl  best_gen19_A.pkl  best_gen1_A.pkl  best_gen21_A.pkl  best_gen22_A.pkl  best_gen23_A.pkl  best_gen24_A.pkl  best_gen25_A.pkl  best_gen28_A.pkl  best_gen29_A.pkl  best_gen2_A.pkl  best_gen30_A.pkl  best_gen31_A.pkl  best_gen32_A.pkl  best_gen34_A.pkl  best_gen35_A.pkl  best_gen36_A.pkl  best_gen37_A.pkl  best_gen38_A.pkl  best_gen39_A.pkl  best_gen3_A.pkl  best_gen40_A.pkl  best_gen41_A.pkl  best_gen42_A.pkl  best_gen4_A.pkl  best_gen5_A.pkl  best_gen6_A.pkl  best_gen7_A.pkl  best_gen9_A.pkl
results/no_penalty/: best_gen10_A.pkl  best_gen10_B.pkl  best_gen11_A.pkl  best_gen11_B.pkl  best_gen12_A.pkl  (+93 more)
scripts/: experiments.sh  install_sys_dependencies.sh
